# Self-Buildium-Integration

./: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt
docs/: deployment.md
my-app/clients/buildium/openapi_client/: exceptions.py
my-app/clients/buildium/openapi_client/api/: __init__.py  association_meter_readings_api.py  association_owners_api.py  budgets_api.py  listings_api.py  ownership_account_transactions_api.py  rental_appliances_api.py  rental_units_api.py  tasks_api.py
my-app/clients/buildium/openapi_client/models/: account_info_message.py  all_tasks_message.py  applicant_post_message.py  application_message.py  applied_vendor_credit_message.py  association_appliance_service_history_message.py  association_architectural_request_message.py  (+106 more)
my-app/services/: account_context.py
my-app/tasks/: buildium_processor.py  initiation.py
my-app/tests/: conftest.py  test_initiation_workflow.py
my-app/webhooks/: __init__.py  buildium_listener.py
my_app/: __init__.py  config.py
my_app/clients/buildium/openapi_client/: __init__.py  configuration.py
my_app/jobs/: __init__.py  processor.py
my_app/services/: account_context.py
my_app/tasks/: __init__.py  buildium_processor.py  initiation.py  n1_completion.py  n1_data.py  n1_increase.py  n1_notice_pdf.py
my_app/tests/: test_account_context.py  test_buildium_processor.py  test_initiation_workflow.py  test_jobs_processor.py  test_n1_data.py  test_n1_increase_workflow.py  test_webhook_verification.py
my_app/webhooks/: buildium_listener.py  verification.py
scripts/: run_buildium_job.sh
(+353 files in other folders)
